# fast-api-template

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  main.py
src/api/utils/pydantic/: camel_base_model.py
src/api/v1/: __init__.py  root_handler.py  search_handler.py
src/stores/: __init__.py
