[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = "FastAPI application template"
authors = ["Janaka Abeywardhana <contact@janaka.co.uk>"]

[tool.ruff]
line-length = 110
select = ["I"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}
colpali-engine = "^0.3.2"
torch = "^2.5.0"
torchvision = "^0.20.0"
pymupdf = "^1.24.13"
lancedb = "^0.16.0"
rerankers = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start-dev = "fastapi dev src/main.py"