[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = "FastAPI application template"
authors = ["Your name here <email address here>"]

[tool.ruff]
line-length = 110
select = ["I"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start-dev = "fastapi dev src/main.py"